<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mistra</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="background_home_with_logo">background_home_with_logo</string>
    <string name="formations">Formations</string>
    <string name="tutos">Tutoriels</string>
    <string name="devis">Demande de devis</string>
    <string name="blog">Blog Mistra</string>
    <string name="devisMenu">Devis</string>
    <string name="contact">Nous contacter</string>
    <string name="contactMenu">Contact</string>
    <string name="footMistraFormation">(c) MISTRA FORMATION </string>
    <string name="title_activity_list_formations">ListFormations</string>
    <string name="retour">Retour home</string>
    <string name="title_activity_devis">Devis</string>
    <string name="title_activity_list_tutoriaux">ListTutoriels</string>
    <string name="title_activity_contact">Contact</string>
    <string name="adresseText">Adresse</string>
    <string name="adresseMistra">19 rue Béranger, 75003 Paris</string>
    <string name="telephoneText">Téléphone</string>
    <string name="telephoneMistra">01 82 52 25 25 </string>
    <string name="emailText">E-mail</string>
    <string name="emailMistra">formation@mistra.fr</string>
    <string name="title_activity_detail_selection">DetailSelection</string>
    <string name="title_activity_blog">Blog</string>
    <string name="title_activity_sub_list_view">SubListView</string>

    <string name="tutoriel_aucun_tutoriel">Aucun tutoriel\nVeuillez vérifier votre connection internet !</string>
    <string name="formation_aucune_formation">Aucune formation\nVeuillez vérifier votre connection internet !</string>
    <string name="blog_aucun_article">Aucun article\nVeuillez vérifier votre connection internet !</string>

    <string name="devis_error_numTel">Le numéro de téléphone n\'est pas valide</string>
    <string name="devis_error_email">L\'email n\'est pas valide</string>

    <string name="devis_objet">Objet: </string>
    <string name="devis_nom">Nom: </string>
    <string name="devis_email">Email: </string>
    <string name="devis_telephone">Télèphone: </string>
    <string name="devis_ville">Ville: </string>
    <string name="devis_societe">Société: </string>
    <string name="devis_commentaire">Commentaire: </string>
    <string name="devis_envoye">Devis envoyé</string>
    <string name="devis_max_caractere">Vous avez atteint le maximum de caractères !</string>
    <string name="devis_envoie_mail">Envoie de l\'email...</string>
    <string name="devis_aucun_client_mail">Aucun client mail installé.</string>
    <string name="devis_comment_prefixe">Commentaires (max: </string>
    <string name="devis_comment_suffixe"> caractères)</string>

    <string name="contact_envoie_email">Demande de contact</string>

</resources>
