<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="fr.formation.matelli.mistra.Home">


    <RelativeLayout
        android:id= "@+id/headerFormations"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_degade_head"
        android:layout_alignParentTop="true" >

        <ImageButton
            android:id="@+id/btnRetourHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:layout_alignParentStart="false"
            android:background="@null"
            android:contentDescription="@string/retour"
            android:padding="15dp"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactMenu"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>


    </RelativeLayout>

   <LinearLayout
        android:id="@+id/linear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_below="@id/headerFormations">

       <ImageView
           android:id="@+id/homeWithLogo"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:src="@drawable/background_home_with_logo"
           android:scaleType="centerCrop"
           android:layout_weight="1"
           android:contentDescription="@string/background_home_with_logo" />



            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp"
                        android:id="@+id/ll_adresse">
                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:src="@android:drawable/ic_menu_mylocation"
                            android:layout_weight="3"
                            android:background="@null"/>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:padding="5dp">
                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/adresseText"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                />

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/adresseMistra"
                                android:textColor="@android:color/holo_purple"
                                android:padding="2dp"/>
                        </LinearLayout>
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp"
                        android:id="@+id/ll_numTel">
                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:src="@android:drawable/sym_action_call"
                            android:layout_weight="3"
                            android:background="@null"/>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:padding="5dp">
                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/telephoneText"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/telephoneMistra"
                                android:textColor="@android:color/holo_purple"
                                android:padding="2dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp"
                        android:id="@+id/ll_email">
                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:src="@android:drawable/sym_action_email"
                            android:layout_weight="3"
                            android:background="@null"/>
                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:padding="5dp">
                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/emailText"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/emailMistra"
                                android:textColor="@android:color/holo_purple"
                                android:padding="2dp"/>


                        </LinearLayout>
                    </LinearLayout>
                </TableRow>


            </TableLayout>


            <!--<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:id="@+id/ll_adresse"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@android:drawable/ic_menu_mylocation"
                    android:layout_weight="3"
                    android:background="@null"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/adresseText"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/adresseMistra"
                        android:textColor="@android:color/holo_purple"
                        android:padding="2dp"/>


                </LinearLayout>
            </LinearLayout> -->



        <!--<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:id="@+id/ll_numTel">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@android:drawable/sym_action_call"
                android:layout_weight="3"
                android:background="@null"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="5dp">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telephoneText"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telephoneMistra"
                    android:textColor="@android:color/holo_purple"
                    android:padding="2dp"/>


            </LinearLayout>
        </LinearLayout> -->

        <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:id="@+id/ll_email">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@android:drawable/sym_action_email"
                android:layout_weight="3"
                android:background="@null"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="5dp">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emailText"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emailMistra"
                    android:textColor="@android:color/holo_purple"
                    android:padding="2dp"/>


            </LinearLayout>
        </LinearLayout> -->

       <TextView
           android:id="@+id/view"
           android:layout_width="fill_parent"
           android:layout_height="15dp"
           android:background="@drawable/vague_contact"
           />
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@id/view"
    android:layout_alignParentBottom="true"
    android:background="@drawable/degrade_cellule"
    android:padding="5dp"
    android:layout_gravity="bottom">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_facebook"
            android:layout_weight="1"
            android:background="@null"
            android:layout_margin="2dp"
            android:id="@+id/btn_facebook" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_twitter"
            android:layout_weight="1"
            android:background="@null"
            android:layout_margin="2dp"
            android:id="@+id/btn_twitter" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_google"
            android:layout_weight="1"
            android:background="@null"
            android:layout_margin="2dp"
            android:id="@+id/btn_google" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_linkedin"
            android:layout_weight="1"
            android:background="@null"
            android:layout_margin="2dp"
            android:id="@+id/btn_linkedin" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_viadeo"
            android:layout_weight="1"
            android:background="@null"
            android:layout_margin="2dp"


            android:id="@+id/btn_viadeo" />

    </LinearLayout>
</LinearLayout>

    </LinearLayout>



</RelativeLayout>
